--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -118,7 +118,7 @@
                     </div> -->
                 </div>
                 
-                <div id="son" class="lg:w-1/4 w-full flex-shrink-0">
+                <!-- <div id="son" class="lg:w-1/4 w-full flex-shrink-0">
 
                     <div uk-sticky="offset:100" class="uk-sticky">
 
@@ -155,7 +155,7 @@
                             <a href="#" class="bg-gray-100 py-1.5 px-4 rounded-full"> ⚽️🏀🏐 SPOR</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
 
         </div>
