--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -87,9 +87,21 @@
             konu: false,
             title: "",
             tag: "",
-            yyy: null
+            yyy: null,
+            baglanti : true,
+            yorumm : false
         },
         methods: {
+            baglac(){
+                alert("Çalıştı")
+                this.baglanti = true
+                this.yorum = false
+            },
+            yorac(){
+                alert("Çalıştı")
+                this.baglanti = false
+                this.yorumm = true
+            },
             acKapa() {
                 if (durum == false) {
                     this.durum = true
