--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -93,12 +93,10 @@
         },
         methods: {
             baglac(){
-                alert("Çalıştı")
                 this.baglanti = true
-                this.yorum = false
+                this.yorumm = false
             },
             yorac(){
-                alert("Çalıştı")
                 this.baglanti = false
                 this.yorumm = true
             },
