--- a/views/front/auth/myprofile.ejs
+++ b/views/front/auth/myprofile.ejs
@@ -97,9 +97,9 @@
                             <% yorum.forEach(element=> { %>
                                 <div class="flex">
                                     <div>
-                                        <p style="font-size: 15pt; margin-left: -3vw; margin-right: -3vw;"><%= element.konu.title %> </p>
+                                        <p style="font-size: 15pt; margin-left: -3vw; margin-right: -3vw; color: black;"><%= element.konu.title %> </p>
                                         <p class="leading-6"
-                                            style="font-size: 12pt; margin-left: -3vw; margin-right: -3vw;">
+                                            style="font-size: 15pt; margin-left: -3vw; margin-right: -3vw;">
                                             <%= element.yorum %>
                                         </p>
                                         <div class="row" style="margin-left: 2vw;">
