--- a/views/front/auth/profil.ejs
+++ b/views/front/auth/profil.ejs
@@ -71,7 +71,7 @@
                 <div class="flex justify-between lg:border-t flex-col-reverse lg:flex-row" style="padding-top: 10px;">
                     <nav class="cd-secondary-nav pl-2 is_ligh -mb-0.5 border-transparent">
                         <ul>
-                            <li class="active" @click="baglac()"><a > Raf </a></li>
+                            <li @click="baglac()"><a > Raf </a></li>
                             <li @click="yorac()"><a >Yorumlar </a></li>
                             <li><a>Beğeniler </a></li>
                             <!-- <li><a href="#0">İstatistik </a></li> -->
