--- a/views/front/auth/myprofile.ejs
+++ b/views/front/auth/myprofile.ejs
@@ -38,7 +38,7 @@
                         style="padding-top: 10px;">
                         <nav class="cd-secondary-nav pl-2 is_ligh -mb-0.5 border-transparent">
                             <ul>
-                                <li class="active" @click="baglac()"><a> Raf</a></li>
+                                <li @click="baglac()"><a> Raf</a></li>
                                 <li @click="yorac()"><a>Yorumlar </a></li>
                                 <li><a>Beğeniler </a></li>
                             </ul>
