--- a/views/front/set/pro.ejs
+++ b/views/front/set/pro.ejs
@@ -9,7 +9,7 @@
    </style>
     <div class="main_content">
         <div class="mcontainer">
-            <h2 class="text-2xl font-semibold text-center" style="margin-top: 20px;"> Profil Bilgileri</h2>
+            <h2 class="text-2xl font-semibold text-center" style="margin-top: 20px;"> Profil Bilgileri &nbsp &nbsp &nbsp <a> <i class="fa fa-save" onclick="bioyaz()"></i></a> </h2>
             <div class="profile_avatar_holder image-upload">
                 <label for="file-input">
 
