--- a/views/front/auth/profil.ejs
+++ b/views/front/auth/profil.ejs
@@ -101,25 +101,32 @@
                                                     <tr>
                                                         <td>
                                                             <div class="flex items-center">
-                                                                <ion-icon name="share-social-outline"></ion-icon>
-                                                                <span class="text-sm">22</span>
+                                                                <ion-icon name="logo-facebook"></ion-icon>
+                                                                <span class="text-sm"></span>
                                                             </div>
                                                         </td>
                                                         <td>
                                                             <div class="flex items-center">
-                                                                <ion-icon style="padding-left: 20vw;" name="heart-outline"></ion-icon>
-                                                                <span class="text-sm">22</span>
+                                                                <ion-icon style="padding-left: 16vw;" name="logo-twitter"></ion-icon>
+                                                                <span class="text-sm"></span>
                                                             </div>
                                                         </td>
                                                         <td>
                                                             <div class="flex items-center">
-                                                                <ion-icon style="padding-left: 20vw;" name="chatbubble-ellipses-outline"></ion-icon>
-                                                                <span class="text-sm"><%= element.comment.length %>11 </span>
+                                                                <ion-icon style="padding-left: 16vw;" name="logo-whatsapp"></ion-icon>
+                                                                <span class="text-sm"></span>
+                                                            </div>
+                                                        </td>
+
+                                                        <td>
+                                                            <div class="flex items-center">
+                                                                <ion-icon style="padding-left: 16vw;" name="chatbubble-ellipses-outline"></ion-icon>
+                                                                <span class="text-sm"><%= element.comment.length %></span>
                                                             </div>
                                                         </td>
                                                     </tr>
                                                 </table>
-                                        </div>                                        
+                                            </div>                                       
                                     </div>
                                     </div>
                                     
@@ -129,85 +136,74 @@
                             <% }) %>
                     </ul>
                 </div>
-                <div class="lg:w-12/12 space-y-6" v-if="yorumm == true">
-                    <ul class="space-y-6">
-                        <% yorum.forEach(element => { %>
-                            <li style="margin-top: 4px;">
-                                <a href="/single/<%= element.konu %>">
-                                    <div class="flex items-start pl-3 space-x-4">
-                                        <div class="flex-1">
-                                            <h3 class="text-lg font-semibold">
-                                                <%= element.konu.title %> 
-                                            </h3>
-                                            <p class="leading-6"
-                                                style="font-size: 15pt; margin-left: -3vw; margin-right: -10;">
-                                                <%= element.yorum %>
-                                            </p>
-                                            <p class="text-sm text-gray-400 mb-2"> Yazar: <span data-href="%40tag-dev.html">Abdullah Bektaş</span> |
-                                                <%= moment(element.createdAt,"ddd MMM DD YYYY HH:mm:ss GMT Z'").fromNow(true) %> önce </span>
-                                            </p>
-                                            <div class="row" style="margin-top: -9px; margin-left: 1px;">
-                                                <table>
-                                                    <tr>
-                                                        
-                                                    <td>
-                                                        <div class="flex items-center">
-                                                            <ion-icon name="logo-facebook"></ion-icon>
-                                                            <span class="text-sm"></span>
-                                                        </div>
-                                                    </td>
-                                                    <td>
-                                                        <div class="flex items-center">
-                                                            <ion-icon name="logo-whatsapp" style="padding-left: 7vw;"></ion-icon>
-                                                            <span class="text-sm"></span>
-                                                        </div>
-                                                    </td>
-                                                    <td>
-                                                        <div class="flex items-center">
-                                                            <ion-icon name="logo-twitter" style="padding-left: 7vw;"></ion-icon>
-                                                            <span class="text-sm"></span>
-                                                        </div>
-                                                    </td>
-                                                    <td>
-                                                        <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 7vw;" 
-                                                                name="heart-outline"></ion-icon>
-                                                            <span class="text-sm"></span>
-                                                        </div>
-                                                    </td>
-                                                    <td>
-                                                        <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 7vw;"  name="chatbubble-ellipses-outline"></ion-icon>
+                <div class="lg:w-12/12 space-y-6" v-if="yorumm == true" style="padding: 6px;">
+                    <% yorum.forEach(element=> { %>
+                        <div class="flex">
+                            <div>
+                                <h3 class="text-lg font-semibold">
+                                    <%= element.konu.title %> 
+                                </h3>
+                                <p style="font-size: 15pt;">
+                                    <%= element.yorum %>
+                                </p>
+                                <div class="row" style="margin-left: 1vw;">
+                                    <table>
+                                        <tr>
+                                            <td>
+                                                <div class="flex items-center">
+                                                    <ion-icon name="logo-facebook" class="text-2xl"></ion-icon>
+                                                    <span class="text-sm"></span>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div class="flex items-center">
+                                                    <ion-icon name="logo-whatsapp" style="padding-left: 9vw;" class="text-2xl"></ion-icon>
+                                                    <span class="text-sm"></span>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div class="flex items-center">
+                                                    <ion-icon name="logo-twitter" style="padding-left: 9vw;" class="text-2xl"></ion-icon>
+                                                    <span class="text-sm"></span>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div class="flex items-center">
+                                                    <ion-icon style="padding-left: 9vw;" class="text-2xl"
+                                                        name="heart-outline"></ion-icon>
+                                                    <span class="text-sm"></span>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div class="flex items-center">
+                                                    <ion-icon style="padding-left: 9vw;" class="text-2xl" name="chatbubble-ellipses-outline"></ion-icon>
 
-                                                            <span class="text-sm"></span>
-                                                        </div>
-                                                    </td>
-                                                    <td>
-                                                        <div class="flex items-center">
-                                                            <b>
-                                                            <ion-icon  style="color:#03A9F4; font-weight:bolder; padding-left: 7vw;" name="checkmark-outline"></ion-icon>
+                                                    <span class="text-sm"></span>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div class="flex items-center">
+                                                    <b>
+                                                    <ion-icon class="text-2xl" style="color:#03A9F4; font-weight:bolder; padding-left: 9vw;" name="checkmark-outline"></ion-icon>
 
-                                                            </b>
-                                                            <span class="text-sm"></span>
-                                                        </div>
-                                                    </td>
-                                                    <td>
-                                                        <div class="flex items-center">
-                                                            <ion-icon  style="padding-left: 7vw;" name="ellipsis-vertical"></ion-icon>
-                                                            <span class="text-sm"></span>
-                                                        </div>
-                                                    </td>
-                                                    </tr>
-                                                </table>
-                                        </div>                                        
-                                    </div>
-                                    </div>
-                                    
-                                </a>
-                            </li>
-                            <hr style="margin-top: -0px;">
-                            <% }) %>
-                    </ul>
+                                                    </b>
+                                                    <span class="text-sm"></span>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div class="flex items-center">
+                                                    <ion-icon class="text-2xl" style="padding-left: 9vw;" name="ellipsis-vertical"></ion-icon>
+                                                    <span class="text-sm"></span>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </div>
+                                <hr style="margin-top: 4px;">
+
+                            </div>
+                        </div>
+                        <% }) %>
                 </div>
             </div>
 
