--- a/views/front/auth/profil.ejs
+++ b/views/front/auth/profil.ejs
@@ -65,7 +65,7 @@
                     
                     <br>
                     <small>233 Abone</small><br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+                    <%= user.bio %>  <br>
                    
                 </div>
                 <div class="flex justify-between lg:border-t flex-col-reverse lg:flex-row" style="padding-top: 10px;">
