--- a/views/front/auth/profil.ejs
+++ b/views/front/auth/profil.ejs
@@ -136,7 +136,7 @@
                             <% }) %>
                     </ul>
                 </div>
-                <div class="lg:w-12/12 space-y-6" v-if="yorumm == true" style="padding: 6px;">
+                <div class="lg:w-12/12 space-y-6" v-if="yorumm == true" style="margin-left:11px;">
                     <% yorum.forEach(element=> { %>
                         <div class="flex">
                             <div>
